inicia vista product

--- a/Login/login.css
+++ b/Login/login.css
@@ -2,11 +2,14 @@
   border: 1px solid black;
   width: 375px;
   height: 812px;
-  background-color: #f9fafc;
+  background-color: #fafafc;
   display: grid;
-  justify-content: center;
-  position: relative; 
-  margin-left: 40rem;
+  justify-content: center; 
+  align-items: center;      
+  text-align: center;   
+  position: absolute;   
+  left: 50%;                 
+  transform: translateX(-50%); 
 
 }
 
