--- a/Verify/verify.css
+++ b/Verify/verify.css
@@ -39,13 +39,17 @@
 }
 
 .verify-log {
-  border: 1px solid black;
+border: 1px solid black;
   width: 375px;
   height: 812px;
-  background-color: #f9fafc;
+  background-color: #fafafc;
   display: grid;
-  position: relative;
-  margin-left: 40rem; 
+  justify-content: center; 
+  align-items: center;      
+  text-align: center;   
+  position: absolute;   
+  left: 50%;                 
+  transform: translateX(-50%); 
 }
 
 .submit{
@@ -60,11 +64,15 @@
   border-radius: 30px;
   position: absolute;
   left:3rem;
-  top: 40rem;
+  top: 30rem;
   background-color: #4157FF;
   color: #f9fafc;
 }
 
-.tiempo{
-     margin: 4rem 0 0 2rem;
+.tiempo {
+    position: absolute;
+    left: 3rem;       
+    top: 46rem;       
+    font-family: monospace;
+    color: #000;
 }
